# celerity-runtime

./: .gitignore  AFFINITY_LOG_LEVEL_FIX.md  BACKEND_COPY_FIX.md  BENCH_WORKFLOW.md  CMakeLists.txt  COPY_FIX_V2.md  FINAL_FIX.md  GETTING_STARTED.md  LEVEL_ZERO_BACKEND_COMPILATION_FIX.md  LEVEL_ZERO_BACKEND_IMPROVEMENTS.md  LEVEL_ZERO_EVENT_STRATEGY.md  LEVEL_ZERO_SYNCHRONIZATION_FIX.md  NATIVE_LEVEL_ZERO.md  NATIVE_LEVEL_ZERO_BACKEND_FIX.md  ONEAPI_BACKEND_CHANGES.md  SOLUTION_SUMMARY.md  build_and_run_bench.sh  build_and_test.sh  build_bench.sh  build_celerity.sh  compare_bench.sh  run_bench.sh  run_bench_all_variants.sh  run_test.sh  run_test_backend_selection.sh  run_test_device_filter.sh  testOutput-1.md  test_all_variants.sh  test_and_bench_all_variants.sh  test_backend_selection.cc  test_device_filter.cc
.kiro/specs/oneapi-backend-fix/: design.md  requirements.md  tasks.md
bench/: CMakeLists.txt  README.md  build_bench.sh
bench/common/: bench_util.hpp  sycl_helpers.hpp
bench/comparison_all/: version_comparison.csv  version_comparison.md
bench/micro/: event_overhead.cpp  memcpy_linear.cpp
bench/plots_v0_baseline/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/plots_v1_event_pooling/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/plots_v2_immediate_pool/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/plots_v3_batch_fence/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/plots_v4_micro_optimized/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/plots_v5_No_Sync/: summary_statistics.csv  summary_statistics.md  version_info.txt
bench/scripts/: analyze_results.py  compare_versions.py  requirements.txt  run_matrix.sh
include/: print_utils_internal.h  system_info.h
include/backend/: backend.h  oneapi_backend.h  sycl_backend copy 1.h  sycl_backend.h
src/: named_threads.cc  runtime.cc
src/backend/: CMakeLists.txt  READEME.md  VERSION_FOR_BACKEND.md  oneapi_backend.cc  sycl_backend.cc  sycl_cuda_backend.cc  sycl_level_zero_backend copy 1.cc  sycl_level_zero_backend copy 2.cc  sycl_level_zero_backend copy 3.cc  sycl_level_zero_backend copy 4.cc  sycl_level_zero_backend copy 5.cc  sycl_level_zero_backend.cc
src/platform_specific/: affinity.unix.cc
test/: l0_microbench.sh  stress_test.sh  stress_v1.sh  stress_v2.sh  test_utils.cc  x_celerity_l0_microbench.cpp  x_level_zero_pool_stress_tests.cc  x_level_zero_pool_stress_tests_v2.cc
